--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
