--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.7",
+    "cropperjs": "^1.6.2",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-image-crop": "^11.0.7",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
