--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.471.1",
+    "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
