--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.7",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
