--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.3",
     "openai": "^5.3.0",
     "streamifier": "^0.1.1",
     "validator": "^13.12.0"
